Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33215

APK template creator does not set the correct path for qmake files

XMLWordPrintable

    • Android
    • babf2e894 (master)
    • 2025wk30s2QtforAndroid, 2025wk32s2QtforAndroid

      When using the APK template creator on a qmake based project, the manifestwizard.cpp adds the wrong file path to the .pro

       

      :-1: error: Cannot find android sources in /home/morphett/testapp.pro 

       

      Steps to Reproduce:

      • Create a new qmake-based project in Qt Creator.
      • Build and run the application to confirm that the initial project setup works.
      • Use Projects > Build > Build Android APK and select Create Templates. The dialog will appear to choose a location for the template files.
      • Create the templates. The wizard will modify the project's .pro file.
      • Build the project again. The build process will now fail, showing the above error.

        For Gerrit Dashboard: QTCREATORBUG-33215
        # Subject Branch Project Status CR V

            sheree_anne Sheree Morphett
            sheree_anne Sheree Morphett
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes