Update the qmake directory path set from APK template wizard

Updated the qmake path directory to the path set in the APK template
wizard instead of the relative path due to path finding now being
incorrect.

Fixes: QTCREATORBUG-33215
Change-Id: I01feeffd860ebec0aaca66b78e8f81f906691120
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>